[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "openrover"
version = "1.0.0-alpha.0"
description = "A Python driver for driving the Rover Robotics OpenRover Basic robot"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",

  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Framework :: Trio"
]
license = "BSD-3-Clause"
repository = "https://github.com/RoverRobotics/openrover_python_driver"
authors = [
  "Dan Rose <dan@digilabs.io>",
  "Rover Robotics <info@roverrobotics.com>",
]
maintainers = [
  "Dan Rose <dan@digilabs.io>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

async_generator = "^1.10"
booty = "^0.3.0"
pyserial = "^3.4"
pytest = "^5.4.2"
pytest-trio = "^0.6.0"
trio = "^0.15.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
poetry-githooks = {version = "^1.1.1", python = "^3.7"}
tox = "^3.15.2"

[tool.githooks]
pre-commit = "black ."

[tool.black]
line-length = 99

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36,py37,py38
isolated_build = True

[testenv]
deps = pytest
commands = pytest
"""