[metadata]
name = openrover
version = attr: setuptools_scm.get_version
author = Dan Rose
author_email = dan@digilabs.io
url = https://github.com/RoverRobotics/openrover_python_driver
license = BSD
description = A Python driver for driving the Rover Robotics OpenRover Basic robot
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Framework :: Trio


[options]
zip_safe = true
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    pyserial
    dataclasses ; python_version<'3.7'
    async_generator
    pytest
    trio >= 0.11
    pytest-trio
    booty >= 0.3
python_requires = >=3.6

[files]
packages = openrover

[options.entry_points]
console_scripts =
    openrover-test = openrover.tests:main
    pitstop = openrover.pitstop:main