[tool.poetry]
name = "openrover"
version = "1.0.0-rc2"
description = "Please use the roverpro package instead"
license = "BSD-3-Clause"
repository = "https://github.com/RoverRobotics/roverpro-python"
authors = [
    "Dan Rose <dan@digilabs.io>",
    "Rover Robotics <info@roverrobotics.com>",
]
maintainers = [
    "Dan Rose <dan@digilabs.io>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
roverpro = {version = "*", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
